<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail_informasi_stunting">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/lilac"
        android:gravity="center">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="SHARING STUNTING"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/back"
        android:onClick="pindahHome"
        android:src="@drawable/back_purple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/detailNama"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_extrabold"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:id="@+id/cardImage"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/cegahstunting"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/detailtextSharing"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:justificationMode="inter_word"/>

</LinearLayout>